# caffe

./: CMakeLists.txt  runCPPExample.sh
FaceDetection/: CMakeLists.txt  ExtractFeature4SVM.cpp  FaceClassifier.cpp  FaceClassifier.h  FaceDetection.cpp  FaceDetector.cpp  FaceDetector.h  Gen24netNeg.cpp  Gen48netNeg.cpp  GenerateInitNeg.cpp  GenerateMeanImage.cpp  GetThesholdFor12net.cpp  GetThesholdForNet.cpp  RunFDDB.cpp  RunVideo.cpp  config.pb.cc  config.pb.h  config.proto  create_leveldb.sh  faceConfig.txt  faceConfig_2nd.txt  main.cpp  utilities_common.cpp  utilities_common.h
FaceDetection/models/: deploy_calibration12.prototxt  deploy_calibration24.prototxt  deploy_detection12.prototxt  deploy_detection24.prototxt  solver_calibration12.prototxt  solver_calibration24.prototxt  solver_calibration48.prototxt  solver_detection12.prototxt  solver_detection12_nofc2.prototxt  solver_detection24.prototxt  solver_detection48.prototxt  train_val_calibration12.prototxt_file  train_val_calibration24.prototxt_file  train_val_calibration48.prototxt_file  train_val_detection12.prototxt_file  train_val_detection12.prototxt_lmdb  train_val_detection12_nofc2.prototxt  train_val_detection24.prototxt_file  train_val_detection48.prototxt_file
models/bvlc_alexnet/: train_val.prototxt
models/bvlc_reference_caffenet/: solver.prototxt
src/caffe/: CMakeLists.txt
src/caffe/layers/: accuracy_layer.cpp  data_layer.cpp
