cmake_minimum_required(VERSION 2.8)
#set(CMAKE_BUILD_TYPE Debug)
project( test )
find_package( OpenCV REQUIRED )
add_executable( test main.cpp )
target_link_libraries( test ${OpenCV_LIBS} )

project(GenInitNeg)
find_package( Boost 1.58 COMPONENTS filesystem system thread program_options REQUIRED )
include_directories( ${Boost_INCLUDE_DIR} )
add_executable( GenInitNeg GenerateInitNeg.cpp utilities_common.cpp)
target_link_libraries( GenInitNeg ${OpenCV_LIBS} ${Boost_LIBRARIES}) 

project(FaceDetection)
find_package( OpenCV REQUIRED )
find_package( Boost 1.58 COMPONENTS filesystem system thread program_options REQUIRED )
add_executable(FaceDetection FaceDetector.cpp FaceDetection.cpp FaceClassifier.cpp utilities_common.cpp config.pb.cc)
target_link_libraries(FaceDetection ${Caffe_LINK} ${OpenCV_LIBS} ${Boost_LIBRARIES})

project(RunFDDB)
find_package( OpenCV REQUIRED )
find_package( Boost 1.58 COMPONENTS filesystem system thread program_options REQUIRED )
add_executable(RunFDDB RunFDDB.cpp FaceDetector.cpp FaceClassifier.cpp utilities_common.cpp config.pb.cc)
target_link_libraries(RunFDDB ${Caffe_LINK} ${OpenCV_LIBS} ${Boost_LIBRARIES})

project(GetThesholdFor12net)
find_package( OpenCV REQUIRED )
find_package( Boost 1.58 COMPONENTS filesystem system thread program_options REQUIRED )
add_executable(GetThesholdFor12net GetThesholdFor12net.cpp FaceClassifier.cpp utilities_common.cpp config.pb.cc)
target_link_libraries(GetThesholdFor12net ${Caffe_LINK} ${OpenCV_LIBS} ${Boost_LIBRARIES})

project(Gen24netNeg)
find_package( OpenCV REQUIRED )
find_package( Boost 1.58 COMPONENTS filesystem system thread program_options REQUIRED )
add_executable(Gen24netNeg Gen24netNeg.cpp FaceDetector.cpp FaceClassifier.cpp utilities_common.cpp config.pb.cc)
target_link_libraries(Gen24netNeg ${Caffe_LINK} ${OpenCV_LIBS} ${Boost_LIBRARIES})

project(Gen48netNeg)
add_subdirectory(ThreadManager)
find_package( OpenCV REQUIRED )
find_package( Boost 1.58 COMPONENTS filesystem system thread program_options REQUIRED )
add_executable(Gen48netNeg Gen48netNeg.cpp FaceDetector.cpp FaceClassifier.cpp utilities_common.cpp config.pb.cc)
target_link_libraries(Gen48netNeg ThreadManager ${Caffe_LINK} ${OpenCV_LIBS} ${Boost_LIBRARIES})

project(GenerateMeanImage)
find_package( OpenCV REQUIRED )
find_package( Boost 1.58 COMPONENTS filesystem system thread program_options REQUIRED )
add_executable(GenerateMeanImage GenerateMeanImage.cpp)
target_link_libraries(GenerateMeanImage ${Caffe_LINK} ${OpenCV_LIBS} ${Boost_LIBRARIES})